syntax = "proto3";
package com.ProductOrder;

option java_multiple_files = true;
option java_package = "com.ProductOrder";

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int64 productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  int64 orderId = 1;
  string status = 2;
  double totalPrice = 3;
}
